# mcp-image-generator

./: .gitignore  Dockerfile  pyproject.toml
src/mcp_image_generator/: server.py
