[project]
name = "mcp-image-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "click-params>=0.5.0",
    "fastmcp>=2.12.4",
    "google-genai>=1.41.0",
    "pydantic>=2.11.10",
]


[dependency-groups]
dev = [
  {include-group = "lint"},
  {include-group = "test"}
]
lint = [
  "ruff>=0.6.9",
]
test = [
  "pyright>=1.1.378", "pytest>=8.3.3"
]

[project.scripts]
run-server = "mcp_image_generator.server:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.pyright]
include = ["my_mcp_server"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 120
target-version = "py310"
